# sentiment-analysis-movies

./: README.md  main.py  pyproject.toml  requirements.txt
models/: sentiment_model.joblib  tfidf_vectorizer.joblib
src/data/: preprocess.py
src/models/: train_model.py
src/sentiment_analysis_movies.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
