[project]
name = "sentiment-analysis-movies"
version = "0.1.0"
description = "A machine learning model to classify movie review sentiment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.0",
    "nltk>=3.8.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
